test/semantic-errors/3.pas
program p;
begin procedure f();
begin writeln(1)end;
end.
